--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "test"
   },
   "dependencies": {
-    "chai": "^3.5.0",
     "pick-random": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "^2.4.5",
-    "standard": "^7.0.1"
+    "standard": "^7.0.1",
+    "chai": "^3.5.0"
   },
   "scripts": {
     "test": "standard && mocha --harmony_default_parameters",
